# textual-pdf

./: README.md  pyproject.toml
src/textual_pdf/: __init__.py  exceptions.py  pdf_viewer.py
src/textual_pdf_view/: __init__.py  pdf_viewer.py  viewer.py
